fix alignment

--- a/app/sass/about.sass
+++ b/app/sass/about.sass
@@ -203,6 +203,7 @@
                 bottom: 2%
             .card-4
                 margin-left: 0
+                align-self: initial
             .card-number-4
                 left: 103%
                 top: 4%
